@@ -1,15 +1,15 @@
 package WWW::GoKGS::Scraper::TournInfo;
 use strict;
-use warnings FATAL => 'all';
+use warnings;
 use parent qw/WWW::GoKGS::Scraper/;
 use WWW::GoKGS::Scraper::Declare;
 use WWW::GoKGS::Scraper::TournLinks;
 
 sub base_uri { 'http://www.gokgs.com/tournInfo.jsp' }
 
-sub _build_scraper {
+sub __build_scraper {
     my $self = shift;
-    my $links = $self->_build_tourn_links;
+    my $links = $self->__build_tourn_links;
 
     scraper {
         process '//h1', 'name' => [ 'TEXT', sub { s/ \([^)]+\)$// } ];
