@@ -1,23 +1,29 @@
 package WWW::GoKGS::Scraper::TournList;
 use strict;
-use warnings FATAL => 'all';
+use warnings;
 use parent qw/WWW::GoKGS::Scraper/;
 use WWW::GoKGS::Scraper::Declare;
 
 sub base_uri { 'http://www.gokgs.com/tournList.jsp' }
 
-sub _build_scraper {
+sub __build_scraper {
     my $self = shift;
+
+    my %tournament = (
+        name => 'TEXT',
+        uri => '@href',
+    );
+
+    my %year_index = (
+        year => 'TEXT',
+        uri  => '@href',
+    );
 
     scraper {
         process '//a[starts-with(@href, "tournInfo.jsp")]',
-                'tournaments[]' => {
-                    name => 'TEXT',
-                    uri => '@href' };
+                'tournaments[]' => \%tournament;
         process '//a[starts-with(@href, "tournList.jsp")]',
-                'year_index[]' => {
-                    year => 'TEXT',
-                    uri  => '@href' };
+                'year_index[]' => \%year_index;
         process '//p[preceding-sibling::h2/text()="Year Index"]',
                 '_years' => 'TEXT';
     };
